src/test/01-Basic/207-op-overload-pre-post.txt
207-op-overload-pre-post.ck:17:15: error: class 'Foo' has no member 'num'
[17] { return !foo.num; }
                   ^
207-op-overload-pre-post.ck: ...in function 'int @operator~( Foo foo )'
